<resources>
    <string name="app_name">enjoei</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="screen_product_title">Detalhe de produtos</string>
    <string name="screen_product_size_label">tam</string>
    <string name="screen_product_discount_label">% off</string>
    <string name="screen_product_installment_label">em até %sx</string>
    <string name="screen_message_title">Mensagens</string>
    <string name="screen_search_title">Busca de produtos</string>
    <string name="screen_perfil_title">Perfil</string>
    <string name="screen_sell_title">Venda de produtos</string>
    <string name="menu_item_home">Home</string>
    <string name="menu_item_buscar">Buscar</string>
    <string name="menu_item_sell">Vender</string>
    <string name="menu_item_message">Mensagens</string>
    <string name="menu_item_perfil">Perfil</string>
    <string name="loading_msg">Segura aí, que eu estou carregando ;)</string>
    <string name="error_title">turbulências na rede</string>
    <string name="error_msg">nosso cyber voo tá chacoalhando.\n dê uma checada na sua internet \npra continuar com a gente :P</string>
    <string name="error_button_title">tentar de novo</string>

</resources>
