<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">
    <ImageView
            android:id="@+id/imageViewError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_error"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="@dimen/normal"
            app:layout_constraintBottom_toTopOf="@+id/textViewErrorTitle"/>

    <TextView
            android:id="@+id/textViewErrorTitle"
            android:textAppearance="@style/Text.SemiBold.18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/error_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
            android:id="@+id/textViewErrorMsg"
            android:textAppearance="@style/Text.Light.16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/error_msg"
            android:layout_marginTop="@dimen/small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewErrorTitle"/>

    <Button
            android:id="@+id/buttonTryAgain"
            style="@style/CustomButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_button_title"
            android:layout_marginTop="@dimen/largest"
            app:layout_constraintTop_toBottomOf="@+id/textViewErrorMsg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.Group
            android:id="@+id/errorGroup"
            app:constraint_referenced_ids="imageViewError,textViewErrorTitle,textViewErrorMsg,buttonTryAgain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>